; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/formats/xml/extr_rxml.c_rxml_root_node.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/formats/xml/extr_rxml.c_rxml_root_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rxml_node = type { i32 }
%struct.TYPE_3__ = type { %struct.rxml_node* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.rxml_node* @rxml_root_node(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.rxml_node*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %5 = icmp ne %struct.TYPE_3__* %4, null
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load %struct.rxml_node*, %struct.rxml_node** %8, align 8
  store %struct.rxml_node* %9, %struct.rxml_node** %2, align 8
  br label %11

10:                                               ; preds = %1
  store %struct.rxml_node* null, %struct.rxml_node** %2, align 8
  br label %11

11:                                               ; preds = %10, %6
  %12 = load %struct.rxml_node*, %struct.rxml_node** %2, align 8
  ret %struct.rxml_node* %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
